Backend working, front-end polish

--- a/webapp/channels/src/components/start_trial_form_modal/start_trial_form_modal.scss
+++ b/webapp/channels/src/components/start_trial_form_modal/start_trial_form_modal.scss
@@ -1,4 +1,7 @@
 .StartTrialFormModal {
+    &.error {
+        display: none !important;
+    }
     .modal-dialog {
         position: absolute;
         top: 50%;
