--- a/webapp/channels/src/components/start_trial_form_modal/start_trial_form_modal.scss
+++ b/webapp/channels/src/components/start_trial_form_modal/start_trial_form_modal.scss
@@ -2,6 +2,7 @@
     &.error {
         display: none !important;
     }
+
     .modal-dialog {
         position: absolute;
         top: 50%;
@@ -20,7 +21,6 @@
 
     .modal-header {
         .close {
-
             &:hover,
             &:active,
             &:focus,
@@ -36,8 +36,9 @@
             height: 24px;
             border-radius: 4px;
             color: rgba(var(--center-channel-color-rgb), 0.56) !important;
-            font-family: 'Open Sans',
-            sans-serif;
+            font-family:
+                'Open Sans',
+                sans-serif;
             font-size: 32px;
             font-weight: 400;
         }
@@ -51,24 +52,23 @@
             text-align: left;
         }
 
-
         .description {
             margin: 0 auto;
             margin-top: 8px;
+            color: rgba(var(--center-channel-color-rgb), 0.72);
             font-family: 'Open Sans';
             font-size: 14px;
             font-style: normal;
             font-weight: normal;
             line-height: 16px;
             text-align: left;
-            color: rgba(var(--center-channel-color-rgb), 0.72);
         }
 
         display: block;
-        padding-left: 32px;
+        min-height: 48px;
         padding-top: 26px;
         padding-bottom: 0;
-        min-height: 48px;
+        padding-left: 32px;
         border: 0;
         background: var(--center-channel-bg) !important;
         border-radius: 8px;
@@ -80,44 +80,32 @@
         overflow: hidden;
         width: 100%;
         flex-direction: column;
-        padding-left: 32px;
+        padding-top: 32px;
         padding-right: 32px;
         padding-bottom: 26px;
-        padding-top: 32px;
+        padding-left: 32px;
 
         .disclaimer {
-            width: 80%;
+            width: 100%;
             height: 32px;
-            margin: 10px auto;
+            margin: 0;
+            margin-top: 36px;
             margin-bottom: 32px;
+            color: rgba(var(--center-channel-color-rgb), 0.72);
             font-family: 'Open Sans';
             font-size: 12px;
             font-style: normal;
             font-weight: normal;
             line-height: 16px;
-            text-align: center;
+            text-align: left;
         }
-
-        // .text_input {
-        //     line-height: 24px;
-        //     font-size: 16px;
-        // }
-
-
-        // .name_input {
-        //     height:48px;
-        //     // line-height: 24px;
-        //     // font-size: 16px;
-        // }
 
         .email_input {
             margin-top: 36px;
-            // height: 48px;
         }
 
         .company_name_input {
             margin-top: 36px;
-            // height: 48px;
         }
 
         .DropdownInput {
@@ -136,23 +124,14 @@
 
         .countries-section {
             z-index: 999;
-            max-height:164px;
-
-        }
-
-        .disclaimer {
-            margin: 0;
-            margin-top: 36px;
-            text-align: left;
-            color: rgba(var(--center-channel-color-rgb), 0.72);
-            width: 100%;
+            max-height: 164px;
         }
 
         .buttons {
             margin-top: 32px;
             text-align: right;
-            .confirm-btn {
 
+            .confirm-btn {
                 &:hover,
                 &:active,
                 &:focus,
