Shows an error if post edit history fails to load
- Binds the `onFailure` action for `getPostEditHistory` to new
`RECEIVE_POST_HISTORY_FAILURE` action type
- Adds a `errors` reducer to `posts` entity
    - Currently only defines `postEditHistory` as a potential key
- Adds `getPostErrors` selector for the `errors` reducer
- Adds an `errors` prop to `PostEditHistory` by leveraging the selector in `mapStateToProps`
- Adjusts `PostEditHistory` component to display an error container if errors are present
    - Includes relevant styling adjustments to match Figma spec
    - Includes test additions to ensure various states (loading, success, failure) all work as expected

--- a/webapp/channels/src/sass/components/_scrollbar.scss
+++ b/webapp/channels/src/sass/components/_scrollbar.scss
@@ -61,6 +61,9 @@ body {
 }
 
 .scrollbar--view {
+    display: flex;
+    flex-direction: column;
+
     .browser--ie & {
         margin: 0 !important;
         -ms-overflow-style: none;
