--- a/webapp/channels/src/sass/components/_post.scss
+++ b/webapp/channels/src/sass/components/_post.scss
@@ -2356,6 +2356,35 @@
     font-weight: 600;
 }
 
+.edit-post-history__error_container {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+
+    .edit-post-history__error_item {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 56px;
+        text-align: center;
+
+        .edit-post-history__error_heading {
+            padding-top: 20px;
+            color: var(--center-channel-color);
+            font-size: 20px;
+            font-weight: 600;
+            line-height: 28px;
+        }
+
+        .edit-post-history__error_subheading {
+            color: rgba(var(--center-channel-color-rgb), 0.72);
+            font-weight: 400;
+        }
+    }
+}
+
 .post-list__dynamic {
     scrollbar-color: var(--center-channel-color-32) #fff0;
     scrollbar-width: thin;
