--- a/webapp/channels/src/components/self_hosted_expansion_modal/expansion_card.scss
+++ b/webapp/channels/src/components/self_hosted_expansion_modal/expansion_card.scss
@@ -106,6 +106,7 @@
         }
 
         .costAmount {
+            width: 100%;
             margin-right: 0;
             margin-left: auto;
             font-weight: 700;
