--- a/webapp/channels/src/components/self_hosted_expansion_modal/self_hosted_expansion_modal.scss
+++ b/webapp/channels/src/components/self_hosted_expansion_modal/self_hosted_expansion_modal.scss
@@ -3,7 +3,7 @@
 
     .form-view {
         display: flex;
-        overflow: hidden;
+        overflow-x: hidden;
         width: 100%;
         height: 100%;
         flex-direction: row;
@@ -144,6 +144,9 @@
             }
 
             input[type=checkbox] {
+                width: 17px;
+                height: 17px;
+                flex-shrink: 0;
                 margin-right: 12px;
             }
 
