--- a/webapp/channels/src/components/admin_console/billing/delete_workspace/result_modal.scss
+++ b/webapp/channels/src/components/admin_console/billing/delete_workspace/result_modal.scss
@@ -34,7 +34,8 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        height: 600px;
+        height: 360px;
+        width: 600px;
         border: 1px solid rgba(var(--center-channel-color-rgb), 0.08);
         margin: auto;
         border-radius: 8px;
@@ -48,8 +49,23 @@
         .modal-content {
             height: 100%;
 
+            .IconMessage__svg-wrapper {
+                margin-left: 0;
+            }
+
             .IconMessage-h3 {
                 margin-top: 0;
+            }
+
+            .IconMessage-sub {
+                margin-top: 0;
+                max-width: 504px;
+            }
+
+            .IconMessage-buttons {
+                margin-top: 60px;
+                justify-content: right;
+                padding-right: 24px;
             }
         }
     }
