MM-50252_Refresh UI of the marketplace to improve first impressions

--- a/webapp/channels/src/sass/utils/_mixins.scss
+++ b/webapp/channels/src/sass/utils/_mixins.scss
@@ -114,8 +114,12 @@
         display: flex;
         font-size: 18px;
 
-        &::before {
+        &:first-child::before {
             margin: 0 7px 0 0;
+        }
+
+        &:last-child::before {
+            margin: 0 0 0 7px;
         }
     }
 }
