fix lint and translations

--- a/webapp/channels/src/components/signup/signup.scss
+++ b/webapp/channels/src/components/signup/signup.scss
@@ -167,14 +167,14 @@
                     }
 
                     .newsletter {
-                        font-family: 'Open Sans';
-                        font-style: normal;
-                        font-weight: 400;
-                        font-size: 12px;
-                        line-height: 16px;
-                        color: #3F4350;
                         margin-top: 24px;
                         margin-bottom: 32px;
+                        color: #3f4350;
+                        font-family: 'Open Sans';
+                        font-size: 12px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 16px;
 
                         .interested {
                             display: block;
