--- a/webapp/channels/src/components/widgets/inputs/check/check.scss
+++ b/webapp/channels/src/components/widgets/inputs/check/check.scss
@@ -9,11 +9,11 @@
 
     .text {
         margin-left: 8px;
+        color: #3f4350;
         font-family: 'Open Sans';
+        font-size: 12px;
         font-style: normal;
         font-weight: 400;
-        font-size: 12px;
         line-height: 16px;
-        color: #3F4350;
     }
 }
