--- a/webapp/channels/src/sass/utils/_mixins.scss
+++ b/webapp/channels/src/sass/utils/_mixins.scss
@@ -150,7 +150,7 @@
         outline: none;
     }
 
-    &:disabled {
+    &:disabled:not(.always-show-enabled) {
         background: rgba(var(--center-channel-color-rgb), 0.08);
         color: rgba(var(--center-channel-color-rgb), 0.32);
         cursor: not-allowed;
