MM-50252_Refresh UI of the marketplace to improve first impressions

--- a/webapp/channels/src/components/plugin_marketplace/marketplace_modal.scss
+++ b/webapp/channels/src/components/plugin_marketplace/marketplace_modal.scss
@@ -268,7 +268,7 @@
     }
 
     .item_error {
-        background-color: rgba(var(--error-text-rgb), 0.08);
+        background-color: rgba(var(--error-text-color-rgb), 0.08);
     }
 
     .loading {
