[MM-51233] Updates for Trial Requests (#22620)
* Add new trial form to enrich trial requests with more customer info

* Update snapshots

* One more addition

* Fixes from PR feedback

* Fix types, i18n, update e2e tests

* Fix linter

* Fix i18n?

* Fix blank translation

* update snapshot

* Update snapshot properly

* Remove inapplicable test

* Fix business email validation only happening once

* UX Feedback

* Fix linter

* Fix linter again, not working locally

* FIX LINTER

* Move isvalid check until after some fields are set

* Fix for overlapping modals

* Fix linter

* UX feedback

* UX Feedback

* Fix typo in error modal

* [MM-51551] Add new Trial Form to Playbooks trial requests (#22650)

* Playbooks start trial entrypoints opens new trial form modal

* Fix style

---------

Co-authored-by: Mattermost Build <build@mattermost.com>

* [MM-51347] Trial form error modal for embargoed and air gapped entities (#22656)

* Playbooks start trial entrypoints opens new trial form modal

* Add support for air gapped environments when making trial requests

* Add specific handling for embargoed entities

* undo some code

* Fix linter

* Fix types

* Fix style

* Updates because TE has to upgrade to E0 before it can activate a trial

---------

Co-authored-by: Mattermost Build <build@mattermost.com>

---------

Co-authored-by: Mattermost Build <build@mattermost.com>

--- a/webapp/channels/src/components/start_trial_form_modal/start_trial_form_modal.scss
+++ b/webapp/channels/src/components/start_trial_form_modal/start_trial_form_modal.scss
@@ -1,10 +1,14 @@
-.StartTrialModal {
+.StartTrialFormModal {
+    &.error {
+        display: none !important;
+    }
+
     .modal-dialog {
         position: absolute;
         top: 50%;
         left: 50%;
         width: 512px;
-        height: 496px;
+        height: 660px;
         border: 1 px solid rgba(var(--center-channel-color-rgb), 0.08);
         margin: auto;
         border-radius: 8px;
@@ -26,10 +30,10 @@
                 opacity: 1;
             }
 
-            top: 6px;
-            right: 4px;
-            width: 4rem;
-            height: 4rem;
+            top: 26px;
+            right: 26px;
+            width: 24px;
+            height: 24px;
             border-radius: 4px;
             color: rgba(var(--center-channel-color-rgb), 0.56) !important;
             font-family:
@@ -39,9 +43,32 @@
             font-weight: 400;
         }
 
-        height: 48px;
+        .title {
+            font-family: Metropolis, sans-serif;
+            font-size: 22px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 28px;
+            text-align: left;
+        }
+
+        .description {
+            margin: 0 auto;
+            margin-top: 8px;
+            color: rgba(var(--center-channel-color-rgb), 0.72);
+            font-family: 'Open Sans';
+            font-size: 14px;
+            font-style: normal;
+            font-weight: normal;
+            line-height: 16px;
+            text-align: left;
+        }
+
+        display: block;
         min-height: 48px;
-        padding: 0;
+        padding-top: 26px;
+        padding-bottom: 0;
+        padding-left: 32px;
         border: 0;
         background: var(--center-channel-bg) !important;
         border-radius: 8px;
@@ -53,75 +80,69 @@
         overflow: hidden;
         width: 100%;
         flex-direction: column;
-        padding: 0;
-
-        .upgrade-image {
-            display: block;
-            margin: auto;
-        }
-
-        .title {
-            width: 80%;
-            margin: 0 auto;
-            margin-top: 16px;
-            font-family: Metropolis, sans-serif;
-            font-size: 22px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 28px;
-            text-align: center;
-        }
-
-        .description {
-            width: 80%;
-            margin: 0 auto;
-            margin-top: 8px;
-            font-family: 'Open Sans';
-            font-size: 14px;
-            font-style: normal;
-            font-weight: normal;
-            line-height: 16px;
-            text-align: center;
-        }
+        padding-top: 32px;
+        padding-right: 32px;
+        padding-bottom: 26px;
+        padding-left: 32px;
 
         .disclaimer {
-            width: 80%;
+            width: 100%;
             height: 32px;
-            margin: 10px auto;
+            margin: 0;
+            margin-top: 36px;
             margin-bottom: 32px;
+            color: rgba(var(--center-channel-color-rgb), 0.72);
             font-family: 'Open Sans';
             font-size: 12px;
             font-style: normal;
             font-weight: normal;
             line-height: 16px;
-            text-align: center;
+            text-align: left;
+        }
+
+        .email_input {
+            margin-top: 36px;
+        }
+
+        .company_name_input {
+            margin-top: 36px;
+        }
+
+        .DropdownInput {
+            margin-top: 36px;
+
+            .DropDown__menu {
+                z-index: 999;
+                max-height: 124px;
+            }
+
+            .DropDown__menu-list {
+                z-index: 999;
+                max-height: 124px;
+            }
+        }
+
+        .Input___error {
+            height: 100%;
+            font-weight: 600;
+            line-height: 16px;
+
+            .icon.error.icon-alert-circle-outline {
+                width: 16px;
+                height: 16px;
+                margin-right: 4px;
+                font-size: 16px;
+            }
+        }
+
+        .countries-section {
+            z-index: 999;
+            max-height: 164px;
         }
 
         .buttons {
             margin-top: 32px;
-            margin-bottom: 32px;
-            text-align: center;
-
-            .dismiss-btn {
-                &:hover,
-                &:active,
-                &:focus,
-                &:active:focus {
-                    border: none;
-                    background: rgba(var(--button-bg-rgb), 0.08);
-                    border-radius: 4px;
-                }
-
-                height: 40px;
-                align-items: center;
-                align-self: center;
-                border: none;
-                background: var(--center-channel-bg);
-                color: var(--button-bg);
-                font-size: 14px;
-                font-weight: 600;
-                line-height: 14px;
-            }
+            text-align: right;
 
             .confirm-btn {
                 &:hover,
