update text color

--- a/webapp/channels/src/components/widgets/inputs/check/check.scss
+++ b/webapp/channels/src/components/widgets/inputs/check/check.scss
@@ -9,7 +9,7 @@
 
     .text {
         margin-left: 8px;
-        color: #3f4350;
+        color: var(--center-channel-color-rgb);
         font-family: 'Open Sans';
         font-size: 12px;
         font-style: normal;
