--- a/webapp/channels/src/components/signup/signup.scss
+++ b/webapp/channels/src/components/signup/signup.scss
@@ -169,7 +169,7 @@
                     .newsletter {
                         margin-top: 24px;
                         margin-bottom: 32px;
-                        color: #3f4350;
+                        color: var(--center-channel-color-rgb);
                         font-family: 'Open Sans';
                         font-size: 12px;
                         font-style: normal;
