adding group members to channel initial commit

--- a/webapp/channels/src/sass/components/_channel-invite-modal.scss
+++ b/webapp/channels/src/sass/components/_channel-invite-modal.scss
@@ -90,6 +90,18 @@
         .more-modal__options {
             overflow: visible;
             min-height: auto;
+
+            .add-group-members {
+                font-family: 'Open Sans';
+                font-style: normal;
+                font-weight: 600;
+                font-size: 12px;
+                line-height: 16px;
+                min-width: 110px;
+                color: var(--button-bg);
+                display: flex;
+                margin-left: auto;
+            }
         }
     }
 
