--- a/webapp/channels/src/sass/components/_channel-header__icon.scss
+++ b/webapp/channels/src/sass/components/_channel-header__icon.scss
@@ -24,6 +24,7 @@
 
     .icon {
         font-size: 16px;
+        fill: rgba(var(--center-channel-color-rgb), 0.56);
 
         svg {
             width: 16px;
@@ -50,6 +51,7 @@
         }
 
         .icon {
+            fill: v(button-bg);
             color: v(button-bg);
         }
     }
@@ -59,6 +61,10 @@
         background: v(button-bg);
         color: v(button-color);
         fill: v(button-color);
+
+        .icon {
+            fill: v(button-color);
+        }
     }
 
     .icon__text {
@@ -82,6 +88,7 @@
     padding: 4px;
     margin: 0 4px 0 0;
 
+    .channel-header__threads,
     .icon {
         width: 16px;
         height: 16px;
