--- a/webapp/channels/src/components/pricing_modal/pricing_modal.scss
+++ b/webapp/channels/src/components/pricing_modal/pricing_modal.scss
@@ -376,6 +376,10 @@
                                 }
                             }
                         }
+
+                        .plan_briefing_content__reduced {
+                            margin-top: 0;
+                        }
                     }
                 }
 
