--- a/webapp/channels/src/components/pricing_modal/pricing_modal.scss
+++ b/webapp/channels/src/components/pricing_modal/pricing_modal.scss
@@ -287,12 +287,7 @@
                     }
 
                     .plan_price_rate_section__expanded {
-                        margin-bottom: 45px;
-
-                        span,
-                        p {
-                            margin-bottom: 44px;
-                        }
+                        height: 244px;
                     }
 
                     .contact_sales_cta {
