--- a/webapp/channels/src/sass/layout/_sidebar-left.scss
+++ b/webapp/channels/src/sass/layout/_sidebar-left.scss
@@ -53,17 +53,20 @@ $sidebarOpacityAnimationDuration: 0.15s;
         .dropDisabled {
             cursor: no-drop !important;
 
-            .SidebarChannelGroupHeader_groupButton,
-            .SidebarLink {
+            .SidebarChannelGroupHeader_groupButton {
                 opacity: 0.4;
             }
+        }
 
-            .SidebarLink {
-                cursor: no-drop !important;
+        .SidebarLink,
+        .SidebarChannelNavigator__addChannelsCtaLhsButton,
+        .SidebarChannelNavigator__inviteMembersLhsButton,
+        .SidebarChannelNavigator__addAppsCtaLhsButton {
+            opacity: 0.4;
+            cursor: no-drop !important;
 
-                &:hover {
-                    background: none;
-                }
+            &:hover {
+                background: none !important;
             }
         }
 
@@ -179,7 +182,8 @@ $sidebarOpacityAnimationDuration: 0.15s;
         }
 
         &__inviteMembersLhsButton,
-        &__addChannelsCtaLhsButton {
+        &__addChannelsCtaLhsButton,
+        &__addAppsCtaLhsButton {
             display: flex;
             padding: 6px 0;
             margin-left: 15px;
@@ -207,7 +211,9 @@ $sidebarOpacityAnimationDuration: 0.15s;
             }
         }
 
-        &__addChannelsCtaLhsButton {
+        &__inviteMembersLhsButton,
+        &__addChannelsCtaLhsButton,
+        &__addAppsCtaLhsButton {
             border: none;
             margin-left: 0;
             background: none;
@@ -642,6 +648,14 @@ $sidebarOpacityAnimationDuration: 0.15s;
         }
     }
 
+    .SidebarNavContainer .SidebarChannelGroup {
+        margin-bottom: 16px;
+
+        &:first-child {
+            margin-top: 16px;
+        }
+    }
+
     .SidebarChannelGroup.a11y--active {
         .SidebarCategory_newLabel {
             opacity: 0;
@@ -746,7 +760,8 @@ $sidebarOpacityAnimationDuration: 0.15s;
     }
 
     #introTextInvite,
-    #addChannelsCta {
+    #addChannelsCta,
+    #addAppsCta {
         display: flex;
         width: 100%;
         margin-top: -6px;
@@ -923,11 +938,6 @@ $sidebarOpacityAnimationDuration: 0.15s;
             padding-bottom: 6px;
             margin-bottom: 0;
         }
-
-        .followingSibling {
-            padding-bottom: 14px;
-            margin-bottom: 0;
-        }
     }
 
     .SidebarChannelGroupHeader_addButton {
@@ -987,17 +997,7 @@ $sidebarOpacityAnimationDuration: 0.15s;
         margin-bottom: 6px;
     }
 
-    .followingSibling {
-        min-height: 2px;
-        margin-bottom: 14px;
-    }
-
     .SidebarChannelGroup.a11y--active .SidebarChannelGroup_content {
-        padding-bottom: 14px;
-        margin-bottom: 0;
-    }
-
-    .SidebarChannelGroup.a11y--active .followingSibling {
         padding-bottom: 14px;
         margin-bottom: 0;
     }
